--- a/style.css
+++ b/style.css
@@ -4,21 +4,25 @@
 	
 }
 
-.encabezado {
+/*encabezado imagen Edvisto*/
+.header {
     background-image: url("imagenes/encabezado.PNG");
     background-size: cover;
-    height: 180px; /* ajusta la altura según sea necesario */
-    padding-top: 50px; /* espacio entre la imagen y el contenido */
+    height: 150px; /* ajusta la altura según sea necesario */
+    padding-top: 55px; /* espacio entre la imagen y el contenido */
 }
 
+/*cuerpo de la página*/
 body {
-	font-family: sans-serif;
-	background-color: #f4f4f4;
+	font-family: 'Montserrat', sans-serif;
+	background-color: #fff;
 }
 
+/*cuadro del formulario*/
 .login-container {
 	margin: auto;
-	margin-top: 5rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 	width: 80%;
 	max-width: 600px;
 	padding: 2rem;
@@ -26,59 +30,74 @@ body {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
+/*h1 Iniciar sesión*/
 .login-title {
+	margin:auto;
+	width: 40%;
+	padding: 0.5rem;
+	background-color: #24C4AC;
 	text-align: center;
 	margin-bottom: 2rem;
+	border: 3px solid #fff;
+	border-radius: 80px;
 }
 
+/*cuadro del correo electrónico*/
+.form-input {
+	margin: auto;
+	width: 70%;
+	text-align: center;
+	padding: 1rem;
+	margin-bottom: 2.5rem;
+	border: 3px solid #000000;
+	border-radius: 3px;
+}
+
+/*cuadro del correo y los dos checkbox*/
 .login-form {
 	display: flex;
 	flex-direction: column;
 }
 
+/*labels*/
 .form-label {
-	display: flex;
-	align-items: center;
-	margin-bottom: 1rem;
-}
-
-.form-checkbox {
-	margin-right: 0.5rem;
-}
-
-.form-checkmark {
-	display: inline-block;
-	width: 1rem;
-	height: 1rem;
-	border: 1px solid #999;
-	border-radius: 3px;
-}
-
-.form-checkbox:checked + .form-checkmark:after {
-	content: "";
 	display: block;
-	width: 100%;
-	height: 100%;
-	background-color: #999;
-	border-radius: 2px;
+	align-items: center;
+	margin-bottom: 1.5rem;	
 }
 
-.form-input {
-	padding: 0.5rem;
-	margin-bottom: 1rem;
-	border: 1px solid #ccc;
+/*manito para el checked*/
+.form-label input {
+	margin-right: 1.5rem ;
+	cursor: pointer;
+	
+}
+
+label.form-label {
+	margin: auto;
+	width: 70%;
+	text-align: center;
+	padding: 1rem;
+	margin-bottom: 2.5rem;
+	border: 3px solid #000000;
 	border-radius: 3px;
-}
+}	
 
+/*Propiedades del botón ingresar*/
 .form-button {
+	margin:auto;
+	width: 32%;
 	padding: 0.5rem;
-	background-color: #007bff;
-	color: #fff;
-	border: none;
-	border-radius: 3px;
+	background-color: #24C4AC;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	text-align: center;
+	border: 3px solid #fff;
+	border-radius: 80px;
 	cursor: pointer;
 }
 
+/*Hover del botón*/
 .form-button:hover {
-	background-color: #0062cc;
+	background-color: #86E4D4;
 }
