--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
 	
 }
 
+/*LOGIN*/
+
 /*encabezado imagen Edvisto*/
 .header {
     background-image: url("imagenes/encabezado.PNG");
     background-size: cover;
-    height: 150px; /* ajusta la altura según sea necesario */
-    padding-top: 55px; /* espacio entre la imagen y el contenido */
+    height: 100px; /* ajusta la altura según sea necesario */
+    padding-top: 100px; /* espacio entre la imagen y el contenido */
 }
 
 /*cuerpo de la página*/
@@ -25,7 +27,7 @@ body {
 	margin-bottom: 2rem;
 	width: 80%;
 	max-width: 600px;
-	padding: 2rem;
+	padding: 0.5rem;
 	background-color: #fff;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
@@ -33,11 +35,12 @@ body {
 /*h1 Iniciar sesión*/
 .login-title {
 	margin:auto;
+	margin-top: 0.5rem;
+	margin-bottom: 1rem;
 	width: 40%;
-	padding: 0.5rem;
+	padding: 0.3rem;
 	background-color: #24C4AC;
 	text-align: center;
-	margin-bottom: 2rem;
 	border: 3px solid #fff;
 	border-radius: 80px;
 }
@@ -47,8 +50,8 @@ body {
 	margin: auto;
 	width: 70%;
 	text-align: center;
-	padding: 1rem;
-	margin-bottom: 2.5rem;
+	padding: 0.5rem;
+	margin-bottom: 1.5rem;
 	border: 3px solid #000000;
 	border-radius: 3px;
 }
@@ -57,6 +60,7 @@ body {
 .login-form {
 	display: flex;
 	flex-direction: column;
+	margin-top: 0.5rem;
 }
 
 /*labels*/
@@ -70,15 +74,15 @@ body {
 .form-label input {
 	margin-right: 1.5rem ;
 	cursor: pointer;
-	
 }
 
+/*cuadros de soy profesor soy estudiante*/
 label.form-label {
 	margin: auto;
 	width: 70%;
 	text-align: center;
-	padding: 1rem;
-	margin-bottom: 2.5rem;
+	padding: 0.5rem;
+	margin-bottom: 1.5rem;
 	border: 3px solid #000000;
 	border-radius: 3px;
 }	
@@ -86,6 +90,7 @@ label.form-label {
 /*Propiedades del botón ingresar*/
 .form-button {
 	margin:auto;
+	margin-bottom: 1.5rem;
 	width: 32%;
 	padding: 0.5rem;
 	background-color: #24C4AC;
@@ -101,3 +106,132 @@ label.form-label {
 .form-button:hover {
 	background-color: #86E4D4;
 }
+
+
+
+
+
+/*DOCENTE*/
+
+/* Estilos base para el contenedor y los elementos del select */
+.select-container {
+    display: flex;
+	padding: 3rem;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  
+/* label nombre */
+
+.select-container label {
+    margin-right: 2rem;
+	padding: 0.5rem;
+	background-color: #D9D9D9;
+	border-radius: 0.25rem;
+
+  }
+  
+/*select menú*/
+
+#select-menu {
+    flex-grow: 1;
+    padding: 0.5rem;
+	text-align: center;
+    font-size: 1rem;
+    border: none;
+	background-color: #24C4AC;
+    border-radius: 0.25rem;
+  }
+
+  /* Estilos para pantallas pequeñas */
+  @media (max-width: 767px) {
+    .select-container label {
+      margin-bottom: 0.5rem;
+    }
+    
+    #select-menu {
+      font-size: 0.9rem;
+    }
+  }
+
+  /*URL*/
+  
+/* Estilos base para el contenedor y los elementos del label y enlace */
+.url-container {
+	display: block;
+	align-items: center;
+	margin-bottom: 1rem;
+	padding-left: 3rem;
+}
+	  
+.url-container label {
+	margin-right: 1rem;
+	font-size: 1rem;
+}
+
+.url-container a {
+	font-size: 1rem;
+	color: blue;
+	text-decoration: underline;
+	background-color: #86E4D4;
+	border-radius: 40px;
+	padding: 2px;;
+
+}
+/* Estilos para el enlace al pasar el ratón por encima */
+	.url-container a:hover {
+	color: red;
+}
+
+/*Título CALIFICAR VIDEO*/
+
+.calification-title {
+	margin:auto;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	width: 20%;
+	padding: 0.3rem;
+	background-color: #D9D9D9;
+	text-align: center;
+	border: 3px solid #fff;
+	border-radius: 0.25rem;
+}
+
+/*Barras de progreso*/
+
+.progress-bar {
+	display: flex;
+	justify-content: center;
+  }
+  .circle {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	margin: 10px;
+	background-color: #ccc;
+  }
+  .active {
+	background-color: #ffcc00;
+  }
+  
+
+  /* Botón Guardar y Salir */
+
+.container-form-button{
+	position: relative;
+	width: 85px;
+	height: 20px;
+	display: flex;
+	margin-top: 100px;
+	
+  }
+
+button {	
+	background: #24C4AC;
+	border-radius: 0.25rem;
+	font-family: 'Montserrat', sans-serif;
+	padding: 1rem;
+	text-align: center;
+  }
+  
