--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	
-}
+	}
 
 /*LOGIN*/
 
@@ -12,13 +12,13 @@
     background-size: cover;
     height: 100px; /* ajusta la altura según sea necesario */
     padding-top: 100px; /* espacio entre la imagen y el contenido */
-}
+	}
 
 /*cuerpo de la página*/
 body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #fff;
-}
+	}
 
 /*cuadro del formulario*/
 .login-container {
@@ -30,7 +30,7 @@ body {
 	padding: 0.5rem;
 	background-color: #fff;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
+	}
 
 /*h1 Iniciar sesión*/
 .login-title {
@@ -43,7 +43,7 @@ body {
 	text-align: center;
 	border: 3px solid #fff;
 	border-radius: 80px;
-}
+	}
 
 /*cuadro del correo electrónico*/
 .form-input {
@@ -54,27 +54,27 @@ body {
 	margin-bottom: 1.5rem;
 	border: 3px solid #000000;
 	border-radius: 3px;
-}
+	}
 
 /*cuadro del correo y los dos checkbox*/
 .login-form {
 	display: flex;
 	flex-direction: column;
 	margin-top: 0.5rem;
-}
+	}
 
 /*labels*/
 .form-label {
 	display: block;
 	align-items: center;
 	margin-bottom: 1.5rem;	
-}
+	}
 
 /*manito para el checked*/
 .form-label input {
 	margin-right: 1.5rem ;
 	cursor: pointer;
-}
+	}
 
 /*cuadros de soy profesor soy estudiante*/
 label.form-label {
@@ -85,7 +85,7 @@ label.form-label {
 	margin-bottom: 1.5rem;
 	border: 3px solid #000000;
 	border-radius: 3px;
-}	
+	}	
 
 /*Propiedades del botón ingresar*/
 .form-button {
@@ -100,12 +100,12 @@ label.form-label {
 	border: 3px solid #fff;
 	border-radius: 80px;
 	cursor: pointer;
-}
+	}
 
 /*Hover del botón*/
 .form-button:hover {
 	background-color: #86E4D4;
-}
+	}
 
 
 
@@ -120,7 +120,7 @@ label.form-label {
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 1rem;
-  }
+  	}
   
 /* label nombre */
 
@@ -130,7 +130,7 @@ label.form-label {
 	background-color: #D9D9D9;
 	border-radius: 0.25rem;
 
-  }
+	}
   
 /*select menú*/
 
@@ -142,7 +142,7 @@ label.form-label {
     border: none;
 	background-color: #24C4AC;
     border-radius: 0.25rem;
-  }
+  	}
 
   /* Estilos para pantallas pequeñas */
   @media (max-width: 767px) {
@@ -153,36 +153,39 @@ label.form-label {
     #select-menu {
       font-size: 0.9rem;
     }
-  }
+	
+	}
 
   /*URL*/
   
 /* Estilos base para el contenedor y los elementos del label y enlace */
+
 .url-container {
 	display: block;
 	align-items: center;
 	margin-bottom: 1rem;
 	padding-left: 3rem;
-}
+	}
 	  
 .url-container label {
 	margin-right: 1rem;
 	font-size: 1rem;
-}
+	}
 
 .url-container a {
+	margin-right: 0px;
 	font-size: 1rem;
 	color: blue;
 	text-decoration: underline;
 	background-color: #86E4D4;
 	border-radius: 40px;
-	padding: 2px;;
-
-}
+	padding: 4px;
+	
+	}
 /* Estilos para el enlace al pasar el ratón por encima */
 	.url-container a:hover {
 	color: red;
-}
+	}
 
 /*Título CALIFICAR VIDEO*/
 
@@ -195,43 +198,126 @@ label.form-label {
 	background-color: #D9D9D9;
 	text-align: center;
 	border: 3px solid #fff;
-	border-radius: 0.25rem;
-}
+	border-radius: 0.50rem;
+	}
 
 /*Barras de progreso*/
 
-.progress-bar {
+.progress-bar-1 {
 	display: flex;
 	justify-content: center;
-  }
-  .circle {
+	align-items: center;
+	margin-bottom: 20px;
+	
+ 	}
+
+.progress-bar-2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+	
+ 	}
+
+.progress-bar-3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+	margin-right: 4.5rem;
+	
+ 	}
+  
+.progress-bar-4 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+	
+ 	}
+
+.circle {
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
-	margin: 10px;
-	background-color: #ccc;
-  }
-  .active {
-	background-color: #ffcc00;
-  }
+	border: 2px solid #fff;
+	background-color: #fff;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 14px;
+	margin-left: 10px;
+ 	}
+
+ 
+  [data-index="20%"] {
+	font-size: 10px;
+	background-color: #ff0000;
+	color: #000;
+	
+	}
   
+  [data-index="40%"] {
+	font-size: 10px;
+	background-color: #ff0000;
+	color: #000;
+ 	}
+  
+  [data-index="60%"] {
+	font-size: 10px;
+	background-color: #F5FA1E; 
+	color: #000;
+ 	}
+  
+  [data-index="80%"] {
+	font-size: 10px;
+	background-color: #74FB09;
+	color: #000;
+ 	}
+  
+  [data-index="100%"] {
+	font-size: 10px;
+	background-color: #74FB09;
+	color: #000;
+  	}
+  
+  .active {
+	border-width: 4px;
+	border-color: #000;
+	color: #000;
+ 	}
 
   /* Botón Guardar y Salir */
 
-.container-form-button{
+.btn-container {
 	position: relative;
-	width: 85px;
-	height: 20px;
-	display: flex;
-	margin-top: 100px;
-	
-  }
-
-button {	
-	background: #24C4AC;
-	border-radius: 0.25rem;
+	margin-top: 50px;
+	bottom: 10px;
+	right: 20px;
+	margin-left: 80%;
+		
+  	}
+  
+.btn {
+	display: inline-block;
+	background-color: #24C4AC;
 	font-family: 'Montserrat', sans-serif;
-	padding: 1rem;
+	color: #000;
+	padding: 8px 10px;
 	text-align: center;
-  }
+	text-decoration: none;
+	font-size: 16px;
+	margin: 5px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	}
+
+.btn:hover {
+	color: rgb(162, 250, 250) !important;
+	box-shadow: 0 4px 16px rgba(49, 138, 172, 1);
+	transition: all 0.2s ease;
+ 	}
+  
   
