--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ label.form-label {
 	margin-bottom: 2rem;
 	width: 20%;
 	padding: 0.3rem;
+	padding-top: 1rem;
 	background-color: #D9D9D9;
 	text-align: center;
 	border: 3px solid #fff;
@@ -283,7 +284,7 @@ label.form-label {
   	}
   
   .active {
-	border-width: 4px;
+	border-width: 3px;
 	border-color: #000;
 	color: #000;
  	}
@@ -321,3 +322,69 @@ label.form-label {
  	}
   
   
+
+
+
+
+/*ESTUDIANTE*/
+
+/*input para cargar el video*/
+
+.container {
+	display: flex;
+	justify-content: center;
+	margin-top: 50px;
+
+  }
+  
+  .column {
+
+	margin: 0 10px;
+	text-align: center;
+	
+  }
+  
+  .input-box {
+	margin-bottom: 20px;
+	text-align: center;
+  }
+  
+  h2 {
+	font-size: 24px;
+	margin-bottom: 20px;
+  }
+  
+  h3 {
+	font-size: 18px;
+	margin-bottom: 10px;
+  }
+  
+  input[type="text"]{
+	width: 100%;
+	border-radius: 2px;
+	
+}
+
+
+
+/*Círculos calificaciones del estudiante*/
+
+.circle-estudiante {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: black;
+	color: white;
+	text-align: center;
+	line-height: 30px;
+	margin-right: 10px;
+  }
+  
+  .line {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin-top: 8px;
+  }
