--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ label.form-label {
 	
  	}
 
-.circle {
+.circle-1, .circle-2, .circle-3, .circle-4  {
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
@@ -330,61 +330,102 @@ label.form-label {
 
 /*input para cargar el video*/
 
-.container {
+.container-colum {
 	display: flex;
 	justify-content: center;
-	margin-top: 50px;
-
-  }
+	margin: 100px;
+	}
   
-  .column {
-
+.column {
 	margin: 0 10px;
 	text-align: center;
-	
-  }
+	}
   
-  .input-box {
+.input-box {
 	margin-bottom: 20px;
 	text-align: center;
-  }
+	}
   
-  h2 {
+h2 {
 	font-size: 24px;
 	margin-bottom: 20px;
-  }
+  	}
   
-  h3 {
+h3 {
 	font-size: 18px;
 	margin-bottom: 10px;
-  }
-  
-  input[type="text"]{
+	background: #D9D9D9;
+	border-radius: 20px;
+  	}
+
+.container-circle-estudiante {
+	background: #D9D9D9;
+	border-radius: 20px;
+	}
+
+.input-box-tittle {
+	margin-top: 6.7rem;
+	}
+
+input[type="text"]{
 	width: 100%;
-	border-radius: 2px;
-	
-}
+	border-radius: 5px;
+	}
 
+input::placeholder {
+	text-align: center;
+  	line-height: 100px;/* Centrado vertical */
+	}
 
+.input-box-email {
+	width: 100%;
+	border-radius: 5px ;
+	}
+
+/*textarea descripción del video*/
+
+.container-textarea {
+	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
+ 	}
+  
+.textinput {
+	width: 100%;
+	font-size: 10px;
+	background-color: #f2f2f2; /* Cambia el color de fondo */
+  	color: #333; /* Cambia el color de texto */
+	border: 1px solid rgba(217, 217, 217, 0.46);;
+	border-radius: 5px;
+	resize: vertical; /* Permite redimensionar verticalmente */
+	min-height: 20px; /* Altura mínima */
+	max-height: 108px; /* Altura máxima */
+	overflow-y: auto; /* Añade scroll cuando se supera la altura máxima */
+	}
+
+.textinput::placeholder {
+	text-align: center;
+	line-height: 100px;/* Centrado vertical */
+	}
 
 /*Círculos calificaciones del estudiante*/
 
 .circle-estudiante {
 	display: inline-block;
-	width: 30px;
-	height: 30px;
+	width: 25px;
+	height: 25px;
 	border-radius: 50%;
-	background-color: black;
-	color: white;
 	text-align: center;
 	line-height: 30px;
 	margin-right: 10px;
-  }
+	font-size: 8px;
+  	}
   
-  .line {
+.line {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: right;
 	text-align: center;
 	margin-top: 8px;
+	padding: 4px;
   }
