--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ label.form-label {
 .url-container {
 	display: block;
 	align-items: center;
-	margin-bottom: 1rem;
+	margin-bottom: 3rem;
 	padding-left: 3rem;
 	}
 	  
@@ -191,16 +191,21 @@ label.form-label {
 
 .calification-title {
 	margin:auto;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 	width: 20%;
 	padding: 0.3rem;
-	padding-top: 1rem;
 	background-color: #D9D9D9;
 	text-align: center;
 	border: 3px solid #fff;
 	border-radius: 0.50rem;
 	}
+
+@media only screen and (max-width: 900px) {
+	.calification-title {
+	width: 100%;
+	}
+	}
+	
 
 /*Barras de progreso*/
 
@@ -350,11 +355,7 @@ label.form-label {
 	padding: 4px;
 	}
   
-h2 {
-	font-size: 24px;
-	margin-bottom: 20px;
-  	}
-  
+
 h3 {
 	font-size: 18px;
 	margin-bottom: 10px;
