--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	
 	}
 
+
 /*LOGIN*/
 
 /*encabezado imagen Edvisto*/
@@ -38,11 +39,12 @@ body {
 	margin-top: 0.5rem;
 	margin-bottom: 1rem;
 	width: 40%;
-	padding: 0.3rem;
+	padding: 1rem;
 	background-color: #24C4AC;
 	text-align: center;
 	border: 3px solid #fff;
 	border-radius: 80px;
+	font-size: 25px;
 	}
 
 /*cuadro del correo electrónico*/
@@ -90,15 +92,16 @@ label.form-label {
 /*Propiedades del botón ingresar*/
 .form-button {
 	margin:auto;
+	margin-top: 0.5rem;
 	margin-bottom: 1.5rem;
-	width: 32%;
-	padding: 0.5rem;
+	width: 43%;
+	padding: 0.5rem 1rem;
 	background-color: #24C4AC;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;
 	text-align: center;
 	border: 3px solid #fff;
 	border-radius: 80px;
+	font-size: 15px;
 	cursor: pointer;
 	}
 
@@ -106,6 +109,8 @@ label.form-label {
 .form-button:hover {
 	background-color: #86E4D4;
 	}
+
+
 
 
 
@@ -194,10 +199,11 @@ label.form-label {
 	margin-bottom: 1rem;
 	width: 20%;
 	padding: 0.3rem;
-	background-color: #D9D9D9;
+	background-color: #24C4AC;
 	text-align: center;
 	border: 3px solid #fff;
 	border-radius: 0.50rem;
+	font-size: 16px;
 	}
 
 @media only screen and (max-width: 900px) {
@@ -357,15 +363,20 @@ label.form-label {
   
 
 h3 {
+	display: inline-flex;
+	align-items: center;
 	font-size: 18px;
+	height: 30px;
 	margin-bottom: 10px;
 	background: #24C4AC;
 	border-radius: 20px;
+	padding: 5px;
   	}
 
 .container-circle-estudiante {
 	background: #D9D9D9;
 	border-radius: 20px;
+	margin-top: 27px;
 	}
 
 .input-box-tittle {
@@ -410,6 +421,7 @@ input::placeholder {
 	margin-bottom: 10px;
 	background: #24C4AC;
 	border-radius: 20px;
+	padding: 5px;
 	}
 	  
 input[type="url"] {
@@ -438,11 +450,11 @@ input[type="url"] {
 	font-size: 15px;
 	background-color: rgb(224, 217, 217); /* Cambia el color de fondo */
   	color: #333; /* Cambia el color de texto */
-	border: 1px solid rgba(217, 217, 217, 0.46);;
+	border: 1px solid rgba(217, 217, 217, 0.46);
 	border-radius: 5px;
 	resize: vertical; /* Permite redimensionar verticalmente */
 	min-height: 20px; /* Altura mínima */
-	max-height: 108px; /* Altura máxima */
+	max-height: 115px; /* Altura máxima */
 	overflow-y: auto; /* Añade scroll cuando se supera la altura máxima */
 	}
 
@@ -474,3 +486,97 @@ input[type="url"] {
   }
 
  
+
+
+
+  /*pantalla 1 estudiante reestructuración*/
+
+.form-estudiante {
+	display: flex;
+	justify-content: center;
+  }
+  
+.column-estudiante1 {
+	margin: 0 10px;
+	text-align: center;
+  }
+  
+.column-estudiante1 h2 {
+	font-size: 24px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	color: rgb(8,12,92);
+  }
+  
+.column-estudiante1 h3 {
+	font-size: 14px;
+	margin-bottom: 20px;
+	padding: 7px;
+	height: 20px;
+	
+  }
+    
+.input-box-estudiante1 {
+	margin-bottom: 20px;
+	text-align: center;
+  }
+  
+.input-box-estudiante1 input[type="text"],
+.input-box-estudiante1 input[type="email"],
+.input-box-estudiante1 input[type="url"],
+.input-box-estudiante1 textarea {
+	width: 100%;
+	padding: 10px;
+
+  }
+    
+img {
+	max-width: 90%;
+	height: auto;
+	}
+   
+.textarea-estudiante1 {
+	width: 100%;
+	font-size: 15px;
+	background-color: rgb(224, 217, 217); /* Cambia el color de fondo */
+	color: #333; /* Cambia el color de texto */
+	border: 1px solid rgba(217, 217, 217, 0.46);;
+	border-radius: 5px;
+	resize: vertical; /* Permite redimensionar verticalmente */
+	min-height: 20px; /* Altura mínima */
+	max-height: 200px; /* Altura máxima */
+	overflow-y: auto; /* Añade scroll cuando se supera la altura máxima */
+  	}
+
+
+/*botón estudiante*/
+  
+.btn-estudiante1 {
+	position: relative;
+	margin-top: 50px;
+	bottom: 10px;
+	right: 20px;
+	margin-left: 28%;
+		
+  	}
+  
+.btn1 {
+	display: inline-block;
+	background-color: #24C4AC;
+	font-family: 'Montserrat', sans-serif;
+	color: #000;
+	padding: 8px 10px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+	margin: 5px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	}
+
+.btn1:hover {
+	color: rgb(162, 250, 250) !important;
+	box-shadow: 0 4px 16px rgba(49, 138, 172, 1);
+	transition: all 0.2s ease;
+ 	}
