--- a/style.css
+++ b/style.css
@@ -525,6 +525,14 @@ h3 {   /*titulo del proyecto*/
 
 }
 
+@media screen and (max-width: 768px) {
+	h3, .h3-azul, .h3-celesteoscuro {
+		display: inline-flex;
+		}
+	}
+
+
+
 .container-circle-estudiante {
 	background: #D9D9D9;
 	border-radius: 20px;
